--- a/addmission.html
+++ b/addmission.html
@@ -86,14 +86,14 @@
                                   <a class="nav-link" href="placement.html"><i
                                           class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                               </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+                              <li class="nav-item active">
+                                  <a class="nav-link" href="#"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
                               </li>
                               <li class="nav-item">
                                   <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
                                       Notice</a>
                               </li>
-                              <li class="nav-item active">
+                              <li class="nav-item">
                                   <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i>
                                       Contact</a>
                               </li>
@@ -106,143 +106,11 @@
   </section>
   <!-- contact-us -->
   <section id="contact-us">
-    <h1 class="text-center animate__animated animate__fadeInLeft">CONTACT-US</h1>
-    <div class="container">
-      <div class="row">
-
-        <!--team-1-->
-        <div class="col-lg-3">
-          <div class="our-team-main">
-
-            <div class="team-front">
-              <img src="principal.jpg" class="img-fluid" />
-              <h3>Mrs. Rekha</h3>
-              <p>Principal In-charge</p>
-            </div>
-
-            <div class="team-back">
-              <h3><strong>Principal In-charge</strong></h3>
-              <p> Mrs. Rekha : <br><a href="tel:+91 9835113593"><i class="fa-solid fa-phone-flip"></i> 9835113593</a> </p>
-              </span>
-            </div>
-
-          </div>
-        </div>
-        <!--team-1-->
-        <!--team-2-->
-        <div class="col-lg-3">
-          <div class="our-team-main">
-
-            <div class="team-front">
-              <img src="monoj-kumar.jpg" class="img-fluid" />
-              <h3>Mr. Kumar Manoj </h3>
-              <p>Nodal Officer</p>
-            </div>
-
-            <div class="team-back">
-              <h3><strong>Hostel Superintendent</strong></h3>
-              <p> Mr. Kumar Manoj: <br><a href="tel:+91 7004581112"><i class="fa-solid fa-phone-flip"></i> 7004581112</a> </p>
-            </div>
-
-          </div>
-        </div>
-        <!--team-2-->
-
-        <!--team-3-->
-        <div class="col-lg-3">
-          <div class="our-team-main">
-
-            <div class="team-front">
-              <img src="biharisir.jpg" class="img-fluid" />
-              <h3>Mr. Bihari Gond</h3>
-              <p>Hostel In-charge</p>
-            </div>
-
-            <div class="team-back">
-              <h3><strong>Hostel In-charge</strong></h3>
-              <p> Mr. Bihari Gond: <br><a href="tel:+91 790371132"><i class="fa-solid fa-phone-flip"></i> 790371132</a> </p>
-            </div>
-
-          </div>
-        </div>
-        <!--team-3-->
-
-        <!--team-4-->
-        <div class="col-lg-3">
-          <div class="our-team-main">
-
-            <div class="team-front">
-              <img src="shivsagarsir.jpg" class="img-fluid" />
-              <h3>Mr. Shiv Sagar</h3>
-              <p>Admission/ Library In-charger</p>
-            </div>
-
-            <div class="team-back">
-              <h3><strong>Admission / Library In-charge</strong></h3>
-              <p>Mr. Shiv Sagar: <br><a href="tel:+91 9122523906"><i class="fa-solid fa-phone-flip"></i> 9122523906</a> </p>
-            </div>
-
-          </div>
-        </div>
-        <!--team-4-->
-
-        <!--team-5-->
-        <div class="col-lg-3">
-          <div class="our-team-main">
-
-            <div class="team-front">
-              <img src="subodh-sir.jpg" class="img-fluid" />
-              <h3>Mr. Subodh Kumar</h3>
-              <p>Examination Department</p>
-            </div>
-
-            <div class="team-back">
-              <h3><strong>Examination Department</strong></h3>
-              <p> Mr. Subodh Kumar: <br><a href="tel:+91 8935891764"><i class="fa-solid fa-phone-flip"></i> 8935891764</a> </p>
-            </div>
-
-          </div>
-        </div>
-        <!--team-5-->
-        <!--team-6-->
-        <div class="col-lg-3">
-          <div class="our-team-main">
-
-            <div class="team-front">
-              <img src="vishnusir.jpg" class="img-fluid" />
-              <h6><strong>Mr. Vishnu Shankar Singh</strong></h6>
-              <p> Examination Department </p>
-            </div>
-
-            <div class="team-back">
-              <h3><strong>Examination Department</strong></h3>
-<p>  Mr. Vishnu Shankar Singh <br><a href="tel:+91 +91 8809823633"><i class="fa-solid fa-phone-flip"></i> 8809823633</a> </p>
-            </div>
-
-          </div>
-        </div>
-        <!--team 6-->
-        <!--team-7-->
-        <div class="col-lg-3">
-          <div class="our-team-main">
-
-            <div class="team-front">
-              <img src="subodh-sir.jpg" class="img-fluid" />
-              <h3>Mr. Subodh Kumar</h3>
-              <p>Training and Placement Officerr</p>
-            </div>
-
-            <div class="team-back">
-              <h3><strong>Training and Placement Officer</strong></h3>
-              <p> Mr. Subodh Kumar: <br><a href="tel:+91 8935891764"><i class="fa-solid fa-phone-flip"></i> 8935891764</a> </p>
-            </div>
-
-          </div>
-        </div>
-      </div>
+    <h1 class="text-center animate__animated animate__fadeInDown">COMING SOON</h1>
   </section>
-  <!--contact-us end  -->
- <!-- footer starts -->
+
+
+  <!-- -- footer starts --> 
 <section id="footer">
   <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left">
@@ -276,7 +144,7 @@
       </div>
   </div>
 </section>
-<!-- ./Footer -->
+<!-- Footer -->
      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
        
