--- a/notice.html
+++ b/notice.html
@@ -28,14 +28,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
-                    <h5 class="animate__animated animate__flash animate__infinite	infinite">Latest News</h5>
+                    <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
                 </div>
                 <div class="col-md-10 id">
                     <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-                        <a href="#">Johar Jharkhand</a>
-                        <a href="#">Ekkalyan Scholarship</a>
-                        <a href="#">1st sem snap test</a>
-                        <a href="#">3rd semester class schedule</a>
+                        <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
+                        <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
+                        <a href="notice.html">Snap test-2 5th sem</a>
                     </marquee>
                 </div>
             </div>
@@ -71,11 +70,10 @@
                                         <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
+                                    <a class="nav-link" href="about.html"><img src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png"/> About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="department.html"><i class="fa-solid fa-users"></i>
-                                        DEPARTMENTS</a>
+                                    <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/> DEPARTMENTS</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i>
@@ -89,8 +87,7 @@
                                             class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
-                                        Addmission</a>
+                                    <a class="nav-link" href="notice.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
                                 </li>
                                 <li class="nav-item  active">
                                     <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
