--- a/placement.html
+++ b/placement.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-  <title>GWP</title>
+  <title>placement</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" type="text/css" href="animate.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -172,21 +172,20 @@
 <body>
   <header class="toparea">
     <div class="container">
-      <div class="row">
-        <div class="col-md-2">
-          <h5 class="animate__animated animate__flash animate__infinite	infinite">Latest News</h5>
+        <div class="row">
+            <div class="col-md-2">
+                <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
+            </div>
+            <div class="col-md-10 id">
+                <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+                    <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
+                    <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
+                    <a href="notice.html">Snap test-2 5th sem</a>
+                </marquee>
+            </div>
         </div>
-        <div class="col-md-10 id">
-          <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-            <a href="#">Johar Jharkhand</a>
-            <a href="#">Ekkalyan Scholarship</a>
-            <a href="#">1st sem snap test</a>
-            <a href="#">3rd semester class schedule</a>
-          </marquee>
-        </div>
-      </div>
     </div>
-  </header>
+</header>
   <section>
     <div class="container banner">
       <div class="row titlearea">
@@ -211,26 +210,29 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i>Home <span
                       class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"><img src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png"/> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="department.html"><i class="fa-solid fa-users"></i> Departments</a>
-                </li>
+                  <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/> DEPARTMENTS</a>
                 <li class="nav-item">
                   <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                   <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i>
                     Placement</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="notice.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> 
+                      Addmission</a>
+              </li>
                 <li class="nav-item">
                   <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
                 </li>
