--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="animate.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <style type="text/css">
     .about{
     background: #fff;
@@ -46,22 +47,21 @@
   </head>
   <body>
     <header class="toparea">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2">
-                 Latest News
-                </div>
-                <div class="col-md-10 id">
-                 <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-                  <a href="#">Johar Jharkhand</a>
-                  <a href="#">Ekkalyan Scholarship</a>
-                  <a href="#">1st sem snap test</a>
-                  <a href="#">3rd semester class schedule</a>
-                </marquee>
-                </div>
-            </div>
-        </div>
-    </header>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-2">
+                  <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
+              </div>
+              <div class="col-md-10 id">
+                  <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+                      <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
+                      <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
+                      <a href="notice.html">Snap test-2 5th sem</a>
+                  </marquee>
+              </div>
+          </div>
+      </div>
+  </header>
     <section>
         <div class="container banner">
             <div class="row titlearea">
@@ -89,10 +89,11 @@
                               <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i>Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item active">
-                              <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
+                              <a class="nav-link" href="about.html"><img src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png"/> About</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="department.html"><i class="fa-solid fa-users"></i> Departments</a>
+                              <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/>
+                                DEPARTMENTS</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
@@ -103,6 +104,9 @@
                             <li class="nav-item">
                               <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                             </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+                          </li>
                             <li class="nav-item">
                               <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
                             </li>
