--- a/gallery.html
+++ b/gallery.html
@@ -10,13 +10,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-  <title>GWP</title>
+  <title>Gallery</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" type="text/css" href="animate.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
 
   <style type="text/css">
     .placement-image {
@@ -199,21 +200,20 @@
 <body>
   <header class="toparea">
     <div class="container">
-      <div class="row">
-        <div class="col-md-2">
-          <h5 class="animate__animated animate__flash animate__infinite	infinite">Latest News</h5>
+        <div class="row">
+            <div class="col-md-2">
+                <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
+            </div>
+            <div class="col-md-10 id">
+                <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+                    <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
+                    <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
+                    <a href="notice.html">Snap test-2 5th sem</a>
+                </marquee>
+            </div>
         </div>
-        <div class="col-md-10 id">
-          <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-            <a href="#">Johar Jharkhand</a>
-            <a href="#">Ekkalyan Scholarship</a>
-            <a href="#">1st sem snap test</a>
-            <a href="#">3rd semester class schedule</a>
-          </marquee>
-        </div>
-      </div>
     </div>
-  </header>
+</header>
   <section>
     <div class="container banner">
       <div class="row titlearea">
@@ -243,10 +243,10 @@
                       class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
+                  <a class="nav-link" href="about.html"><img src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png"/> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="department.html"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
+                  <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/> DEPARTMENTS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
@@ -258,6 +258,9 @@
                   <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i>
                     Placement</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="notice.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+              </li>
                 <li class="nav-item">
                   <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
                 </li>
