--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
   </head>
   <body>
     <header class="toparea">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2">
-                    <h5 class="animate__animated animate__flash animate__infinite	infinite">Latest News</h5>
-                </div>
-                <div class="col-md-10 id">
-                 <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-                  <a href="#">Johar Jharkhand</a>
-                  <a href="#">Ekkalyan Scholarship</a>
-                  <a href="#">1st sem snap test</a>
-                  <a href="#">3rd semester class schedule</a>
-                </marquee>
-                </div>
-            </div>
-        </div>
-    </header>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-2">
+                  <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
+              </div>
+              <div class="col-md-10 id">
+                  <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+                      <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
+                      <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
+                      <a href="notice.html">Snap test-2 5th sem</a>
+                  </marquee>
+              </div>
+          </div>
+      </div>
+  </header>
     <section>
         <div class="container banner">
             <div class="row titlearea">
@@ -61,25 +60,28 @@
                               <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i> Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i>  About</a>
+                              <a class="nav-link" href="about.html"><img src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png"/> About</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="department.html"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
+                              <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/> DEPARTMENTS</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
+                              <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i>  Facality</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
+                              <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i>  Gallery</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
+                              <a class="nav-link" href="notice.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+                          </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>  Notice</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i> Contact</a>
+                              <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i>  Contact</a>
                             </li>
                           </ul>
                         </div>
@@ -192,7 +194,7 @@
             <div class="col-md-3 col-sm-12">
                 <div>
                     <div>
-                        <p><img src="principal.jpg" alt=""></p>
+                        <p><img src="principal2.jpg" alt=""></p>
                         <h4>Mrs. Rekha</h4>
                         <p id="p1">Principal-In-Charge </p>
                     </div>
