--- a/architech.html
+++ b/architech.html
@@ -18,21 +18,22 @@
   </head>
   <body>
     <header class="toparea">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-2">
-                  <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
-              </div>
-              <div class="col-md-10 id">
-                  <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-                      <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
-                      <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
-                      <a href="notice.html">Snap test-2 5th sem</a>
-                  </marquee>
-              </div>
-          </div>
-      </div>
-  </header>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <h5 class="animate__animated animate__flash animate__infinite	infinite">Latest News</h5>
+                </div>
+                <div class="col-md-10 id">
+                 <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+                  <a href="#">Johar Jharkhand</a>
+                  <a href="#">Ekkalyan Scholarship</a>
+                  <a href="#">1st sem snap test</a>
+                  <a href="#">3rd semester class schedule</a>
+                </marquee>
+                </div>
+            </div>
+        </div>
+    </header>
     <section>
         <div class="container banner">
             <div class="row titlearea">
