--- a/notice.html
+++ b/notice.html
@@ -87,7 +87,7 @@
                                             class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="notice.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+                                    <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
                                 </li>
                                 <li class="nav-item  active">
                                     <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
