--- a/placement.html
+++ b/placement.html
@@ -230,7 +230,7 @@
                     Placement</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="notice.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> 
+                  <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> 
                       Addmission</a>
               </li>
                 <li class="nav-item">
@@ -250,7 +250,7 @@
   <section class="placement">
     <div class="container">
       <div class="heading-placement">
-        <h1>PLACEMENTS IN GWP-JAMSHEDPUR</h1>
+        <h1 class="text-center animate__animated animate__fadeInLeft">PLACEMENTS IN GWP-JAMSHEDPUR</h1>
       </div>
       <div class="col-md-12">
         <img src="1  (1).gif" class="img-fluid">
