--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                               <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+                              <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
                           </li>
                             <li class="nav-item">
                               <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
