--- a/department.html
+++ b/department.html
@@ -208,10 +208,10 @@
                   <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i>
                     Placement</a>
                 </li>
-                <li class="nav-item">
+<!--                 <li class="nav-item">
                   <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i>
                     Addmission</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
                 </li>
