--- a/contact-us.html
+++ b/contact-us.html
@@ -12,101 +12,126 @@
 
   <title>GWP</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="stylesheet" type="text/css" href="style-contact.css"/>
+  <link rel="stylesheet" type="text/css" href="style-contact.css" />
   <link rel="stylesheet" type="text/css" href="animate.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <style type="text/css">
+    .faculty h1 {
+      color: #007B5E;
+      margin-bottom: 60px ;
+    }
+
+    .faculty h1::before {
+      content: "";
+      position: absolute;
+      border-bottom: 5px solid #007B5E;
+      width: 100px;
+      margin-top: 45px;
+    }
+  </style>
 </head>
 
 <body>
   <header class="toparea">
     <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-                <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
-            </div>
-            <div class="col-md-10 id">
-                <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-                    <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
-                    <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
-                    <a href="notice.html">Snap test-2 5th sem</a>
-                </marquee>
-            </div>
+      <div class="row">
+        <div class="col-md-2">
+          <button type="button"
+            class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest
+            News</button>
         </div>
-    </div>
-</header>
-  <section>
-      <div class="container banner">
-          <div class="row titlearea">
-              <div class="col-md-1">&nbsp;&nbsp;</div>
-              <div class="col-md-10">
-                  <img class="banner" src="banner.jpg">
-              </div>
-              <div class="col-md-1">&nbsp;&nbsp;</div>
-          </div>
+        <div class="col-md-10 id">
+          <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+            <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
+            <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
+            <a href="notice.html">Snap test-2 5th sem</a>
+          </marquee>
+        </div>
       </div>
+    </div>
+  </header>
+  <section>
+    <div class="container banner">
+      <div class="row titlearea">
+        <div class="col-md-1">&nbsp;&nbsp;</div>
+        <div class="col-md-10">
+          <img class="banner" src="banner.jpg">
+        </div>
+        <div class="col-md-1">&nbsp;&nbsp;</div>
+      </div>
+    </div>
   </section>
   <section class="menuarea">
-      <div class="container">
-          <div class="row">
-              <div class="col">
-                  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                      <!--<a class="navbar-brand" href="#">Navbar</a>-->
-                      <button class="navbar-toggler" type="button" data-toggle="collapse"
-                          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                          aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                      </button>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <!--<a class="navbar-brand" href="#">Navbar</a>-->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                          <ul class="navbar-nav mr-auto">
-                              <li class="nav-item">
-                                  <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i> Home
-                                      <span class="sr-only">(current)</span></a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="about.html"><img src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png"/> About</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/>
-                                      DEPARTMENTS</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i>
-                                      Facality</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="placement.html"><i
-                                          class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
-                                      Notice</a>
-                              </li>
-                              <li class="nav-item active">
-                                  <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i>
-                                      Contact</a>
-                              </li>
-                          </ul>
-                      </div>
-                  </nav>
-              </div>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i> Home
+                    <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"><img
+                      src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png" /> About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="department.html"><img
+                      src="https://img.icons8.com/small/16/null/department.png" />
+                    DEPARTMENTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i>
+                    Faculty</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i>
+                    Placement</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="admission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i>
+                    Admission</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
+                    Notice</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i>
+                    Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </div>
+    </div>
   </section>
   <!-- contact-us -->
+  <div class="contaioner">
+    <div class="row faculty">
+      <div class="col">
+        <h1 class="text-center animate__animated animate__slideInUp">CONTACT-US</h1>
+      </div>
+    </div>
+  </div>
   <section id="contact-us">
-    <h1 class="text-center animate__animated animate__fadeInLeft">CONTACT-US</h1>
     <div class="container">
       <div class="row">
         <!--team-1-->
@@ -120,7 +145,8 @@
 
             <div class="team-back">
               <h3><strong>Principal In-charge</strong></h3>
-              <p> Mrs. Rekha : <br><a href="tel:+91 9835113593"><i class="fa-solid fa-phone-flip"></i> 9835113593</a> </p>
+              <p> Mrs. Rekha : <br><a href="tel:+91 9835113593"><i class="fa-solid fa-phone-flip"></i> 9835113593</a>
+              </p>
               </span>
             </div>
 
@@ -139,7 +165,8 @@
 
             <div class="team-back">
               <h3><strong>Hostel Superintendent</strong></h3>
-              <p> Mr. Kumar Manoj: <br><a href="tel:+91 7004581112"><i class="fa-solid fa-phone-flip"></i> 7004581112</a> </p>
+              <p> Mr. Kumar Manoj: <br><a href="tel:+91 7004581112"><i class="fa-solid fa-phone-flip"></i>
+                  7004581112</a> </p>
             </div>
 
           </div>
@@ -158,7 +185,8 @@
 
             <div class="team-back">
               <h3><strong>Hostel In-charge</strong></h3>
-              <p> Mr. Bihari Gond: <br><a href="tel:+91 790371132"><i class="fa-solid fa-phone-flip"></i> 790371132</a> </p>
+              <p> Mr. Bihari Gond: <br><a href="tel:+91 790371132"><i class="fa-solid fa-phone-flip"></i> 790371132</a>
+              </p>
             </div>
 
           </div>
@@ -177,7 +205,8 @@
 
             <div class="team-back">
               <h3><strong>Admission / Library In-charge</strong></h3>
-              <p>Mr. Shiv Sagar: <br><a href="tel:+91 9122523906"><i class="fa-solid fa-phone-flip"></i> 9122523906</a> </p>
+              <p>Mr. Shiv Sagar: <br><a href="tel:+91 9122523906"><i class="fa-solid fa-phone-flip"></i> 9122523906</a>
+              </p>
             </div>
 
           </div>
@@ -196,7 +225,8 @@
 
             <div class="team-back">
               <h3><strong>Examination Department</strong></h3>
-              <p> Mr. Subodh Kumar: <br><a href="tel:+91 8935891764"><i class="fa-solid fa-phone-flip"></i> 8935891764</a> </p>
+              <p> Mr. Subodh Kumar: <br><a href="tel:+91 8935891764"><i class="fa-solid fa-phone-flip"></i>
+                  8935891764</a> </p>
             </div>
 
           </div>
@@ -214,7 +244,8 @@
 
             <div class="team-back">
               <h3><strong>Examination Department</strong></h3>
-<p>  Mr. Vishnu Shankar Singh <br><a href="tel:+91 +91 8809823633"><i class="fa-solid fa-phone-flip"></i> 8809823633</a> </p>
+              <p> Mr. Vishnu Shankar Singh <br><a href="tel:+91 +91 8809823633"><i class="fa-solid fa-phone-flip"></i>
+                  8809823633</a> </p>
             </div>
 
           </div>
@@ -232,7 +263,8 @@
 
             <div class="team-back">
               <h3><strong>Training and Placement Officer</strong></h3>
-              <p> Mr. Subodh Kumar: <br><a href="tel:+91 8935891764"><i class="fa-solid fa-phone-flip"></i> 8935891764</a> </p>
+              <p> Mr. Subodh Kumar: <br><a href="tel:+91 8935891764"><i class="fa-solid fa-phone-flip"></i>
+                  8935891764</a> </p>
             </div>
 
           </div>
@@ -240,47 +272,60 @@
       </div>
   </section>
   <!--contact-us end  -->
- <!-- footer starts -->
-<section id="footer">
-  <div class="container">
+  <!-- footer starts -->
+  <section id="footer">
+    <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left">
-          <div class="col-xs-12 col-sm-4 col-md-4">
-              <h5>  &nbsp; Quick links</h5>
-              <ul class="list-unstyled quick-links">
-                  <li><a href="index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
-                  <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
-                  <li><a href="https://jutranchi.ac.in/"><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
-                  <li><a href="https://jceceb.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
-                  <li><a href="galery.html"><i class="fa fa-angle-double-right"></i>Videos</a></li>
-              </ul>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <h5> &nbsp; Quick links</h5>
+          <ul class="list-unstyled quick-links">
+            <li><a href="index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
+            <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
+            <li><a href="https://jutranchi.ac.in/"><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
+            <li><a href="https://jceceb.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
+            <li><a href="galery.html"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <h5> &nbsp; Important Links</h5>
+          <ul class="list-unstyled quick-links">
+            <li><a href="https://www.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a>
+            </li>
+            <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a>
+            </li>
+            <li><a href="https://ekalyan.cgg.gov.in/"><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a>
+            </li>
+            <li><a href="https://scholarships.gov.in/"><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP
+                PORTAL</a></li>
+            <li><a href="https://www.youth4work.com/onlinetalenttest"><i
+                  class="fa fa-angle-double-right"></i>Youth4Work</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="map-box">
+            <div class="map-card">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin"
+                width="100%" height="150%" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-4">
-              <h5> &nbsp; Important Links</h5>
-              <ul class="list-unstyled quick-links">
-                  <li><a href="https://www.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a></li>
-                  <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
-                  <li><a href="https://ekalyan.cgg.gov.in/"><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a></li>
-                  <li><a href="https://scholarships.gov.in/"><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP PORTAL</a></li>
-                  <li><a href="https://www.youth4work.com/onlinetalenttest"><i class="fa fa-angle-double-right"></i>Youth4Work</a></li>                  
-              </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4 col-md-4">
-             <div class="map-box">
-              <div class="map-card">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin" width="100%" height="150%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-             </div>
-          </div>
+        </div>
       </div>
-  </div>
-</section>
-<!-- ./Footer -->
-     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-       
-    <script src="wow.min.js"></script>
-    <script>
-        new WOW().init();
-       </script>
-  </body>
+    </div>
+  </section>
+  <!-- ./Footer -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
+
+  <script src="wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
+</body>
+
 </html>
