--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                               <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/> DEPARTMENTS</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i>  Facality</a>
+                              <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i>  Faculty</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i>  Gallery</a>
@@ -75,7 +75,7 @@
                               <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="notice.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+                              <a class="nav-link" href="admission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Admission</a>
                           </li>
                             <li class="nav-item">
                               <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>  Notice</a>
