--- a/notice.html
+++ b/notice.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>GWP</title>
+    <title>notice</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="noticestyle.css" />
     <link rel="stylesheet" type="text/css" href="animate.css" />
@@ -76,26 +76,22 @@
                                     <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/> DEPARTMENTS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i>
-                                        Facality</a>
+                                    <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Faculty</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="placement.html"><i
-                                            class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
+                                    <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Addmission</a>
+                                    <a class="nav-link" href="admission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> Admission</a>
                                 </li>
                                 <li class="nav-item  active">
-                                    <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
-                                        Notice</a>
+                                    <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i>
-                                        Contact</a>
+                                    <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i> Contact</a>
                                 </li>
                             </ul>
                         </div>
