--- a/placement.html
+++ b/placement.html
@@ -17,10 +17,12 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
   <style type="text/css">
     .heading-placement {
-      
+
       width: 100%;
       box-sizing: border-box;
       text-align: center;
@@ -166,26 +168,40 @@
         width: 95%;
       }
     }
+
+    .Faculty h1 {
+      text-align: center;
+    }
+
+    .Faculty h1::before {
+      content: "";
+      position: absolute;
+      border-bottom: 4px solid #007B5E;
+      width: 30%;
+      margin-top: 45px;
+    }
   </style>
 </head>
 
 <body>
   <header class="toparea">
     <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-                <button type="button" class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest News</button>
-            </div>
-            <div class="col-md-10 id">
-                <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-                    <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
-                    <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
-                    <a href="notice.html">Snap test-2 5th sem</a>
-                </marquee>
-            </div>
+      <div class="row">
+        <div class="col-md-2">
+          <button type="button"
+            class="btn btn-danger animate__animated animate__flash animate__infinite	infinite flash">Latest
+            News</button>
         </div>
+        <div class="col-md-10 id">
+          <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+            <a href="Special_Exam_MSBTE_2022.PDF">Special_Exam_MSBTE_2022</a>
+            <a href="3rd_Semester_routine_GWPJSR.pdf">3rd semester class schedule</a>
+            <a href="notice.html">Snap test-2 5th sem</a>
+          </marquee>
+        </div>
+      </div>
     </div>
-</header>
+  </header>
   <section>
     <div class="container banner">
       <div class="row titlearea">
@@ -215,12 +231,14 @@
                       class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"><img src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png"/> About</a>
+                  <a class="nav-link" href="about.html"><img
+                      src="https://img.icons8.com/fluency-systems-filled/18/null/about-us-male.png" /> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="department.html"><img src="https://img.icons8.com/small/16/null/department.png"/> DEPARTMENTS</a>
+                  <a class="nav-link" href="department.html"><img
+                      src="https://img.icons8.com/small/16/null/department.png" /> DEPARTMENTS</a>
                 <li class="nav-item">
-                  <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
+                  <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Faculty</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
@@ -230,9 +248,9 @@
                     Placement</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="addmission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i> 
-                      Addmission</a>
-              </li>
+                  <a class="nav-link" href="admission.html"><i class="fa-sharp fa-solid fa-child-reaching"></i>
+                    Admission</a>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
                 </li>
@@ -249,8 +267,9 @@
 
   <section class="placement">
     <div class="container">
-      <div class="heading-placement">
-        <h1 class="text-center animate__animated animate__fadeInLeft">PLACEMENTS IN GWP-JAMSHEDPUR</h1>
+      <div class="Faculty">
+        <!-- <h1 class="text-center animate__animated animate__fadeInLeft">PLACEMENTS IN GWP-JAMSHEDPUR</h1> -->
+        <h1 class="text-center animate__animated animate__slideInUp">PLACEMENTS IN GWP-JAMSHEDPUR</h1>
       </div>
       <div class="col-md-12">
         <img src="1  (1).gif" class="img-fluid">
@@ -282,8 +301,9 @@
         <div class="col-3">
           <h5>Our Training Partner</h5>
           <div class="amu">
-            <a href="https://www.idtr.gov.in/" target="_blank" >AMU : IDTR, Govt. Of Jharkhand, Jamshedpur.</a><br /><br />
-            <a href="http://www.autoclusteradityapur.com/" target="_blank" >AMU : Auto Cluster, Adityapur</a>
+            <a href="https://www.idtr.gov.in/" target="_blank">AMU : IDTR, Govt. Of Jharkhand,
+              Jamshedpur.</a><br /><br />
+            <a href="http://www.autoclusteradityapur.com/" target="_blank">AMU : Auto Cluster, Adityapur</a>
           </div>
         </div>
       </div>
@@ -366,45 +386,59 @@
     </div>
   </section>
   <!-- footer starts -->
-<section id="footer">
-  <div class="container">
+  <section id="footer">
+    <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left">
-          <div class="col-xs-12 col-sm-4 col-md-4">
-              <h5>  &nbsp; Quick links</h5>
-              <ul class="list-unstyled quick-links">
-                  <li><a href="index.html" target="_blank" ><i class="fa fa-angle-double-right"></i>Home</a></li>
-                  <li><a href="about.html" target="_blank" ><i class="fa fa-angle-double-right"></i>About</a></li>
-                  <li><a href="https://jutranchi.ac.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
-                  <li><a href="https://jceceb.jharkhand.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
-                  <li><a href="gallery.html" target="_blank" ><i class="fa fa-angle-double-right"></i>Videos</a></li>
-              </ul>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <h5> &nbsp; Quick links</h5>
+          <ul class="list-unstyled quick-links">
+            <li><a href="index.html" target="_blank"><i class="fa fa-angle-double-right"></i>Home</a></li>
+            <li><a href="about.html" target="_blank"><i class="fa fa-angle-double-right"></i>About</a></li>
+            <li><a href="https://jutranchi.ac.in/" target="_blank"><i class="fa fa-angle-double-right"></i>JUT,
+                RANCHI</a></li>
+            <li><a href="https://jceceb.jharkhand.gov.in/" target="_blank"><i
+                  class="fa fa-angle-double-right"></i>JCECEB</a></li>
+            <li><a href="gallery.html" target="_blank"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <h5> &nbsp; Important Links</h5>
+          <ul class="list-unstyled quick-links">
+            <li><a href="https://www.jharkhand.gov.in/" target="_blank"><i class="fa fa-angle-double-right"></i>Govt. of
+                Jharkhand</a></li>
+            <li><a href="https://jutranchi.ac.in/?page_id=221" target="_blank"><i
+                  class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
+            <li><a href="https://ekalyan.cgg.gov.in/" target="_blank"><i class="fa fa-angle-double-right"></i>E-KALYAN
+                SCHOLARSHIP</a></li>
+            <li><a href="https://scholarships.gov.in/" target="_blank"><i class="fa fa-angle-double-right"></i>NATIONAL
+                SCHOLARSHIP PORTAL</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="map-box">
+            <div class="map-card">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin"
+                width="100%" style="border:2px solid gray;" allowfullscreen="" loading="fast"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-4">
-              <h5> &nbsp; Important Links</h5>
-              <ul class="list-unstyled quick-links">
-                  <li><a href="https://www.jharkhand.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a></li>
-                  <li><a href="https://jutranchi.ac.in/?page_id=221" target="_blank" ><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
-                  <li><a href="https://ekalyan.cgg.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a></li>
-                  <li><a href="https://scholarships.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP PORTAL</a></li>                   
-              </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4 col-md-4">
-             <div class="map-box">
-              <div class="map-card">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin" width="100%"  style="border:2px solid gray;" allowfullscreen="" loading="fast" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-             </div>
-          </div>
+        </div>
       </div>
-  </div>
-</section>
-<!-- ./Footer -->
-     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-       
-    <script src="wow.min.js"></script>
-    <script>
-        new WOW().init();
-       </script>
-  </body>
+    </div>
+  </section>
+  <!-- ./Footer -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
+
+  <script src="wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
+</body>
+
 </html>
